--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "futsal-app",
+  "name": "sphera",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "nprogress": "^0.2.0",
+    "vee-validate": "^2.2.10",
+    "vue": "^2.6.10",
+    "vue-perfect-scrollbar": "^0.1.0",
+    "vue-router": "^3.0.6",
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
@@ -18,7 +24,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.0.5"
   },
   "eslintConfig": {
     "root": true,
