--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "fuse.js": "^3.4.5",
     "nprogress": "^0.2.0",
     "vee-validate": "^2.2.10",
     "vue": "^2.6.10",
